# quant-analysis

./: README.md  adaboost_t.hpp
factor_cal/hqrec/src/: CMakeLists.txt  efh_conf_profile.cc  efh_sse_spi.cc  efh_szse_spi.cc  hq_ops_efh.cc  message.cc
factor_cal/hqrec/src/common/: ConfigFile.h  SPSCQueue.h  hq_ops_common.conf  hq_ops_efh.ini
factor_cal/hqrec/src/efh_api/: efh_lev2_define.h  i_efh_sse_lev2_api.h  i_efh_sze_lev2_api.h  sse_hpf_define.h  sze_hpf_define.h
factor_cal/hqrec/src/include/: efh_conf_profile.h  efh_sse_spi.h  efh_szse_spi.h  hq_ops_efh.h  message.hh
factor_cal/src/: CMakeLists.txt  config.conf  quant_bin.cc  quant_data_proc.cc  quant_data_proc.hh  quant_factor_cal.cc  quant_factor_cal.hh  quant_kline_proc.cc  quant_kline_proc.hh  quant_manager.cc  quant_manager.hh  quant_processed_data.hh
model/: base_logic.hpp  base_net.hpp  bp.hpp  cascade_judger.hpp  dbn_t.hpp  mat.hpp  restricked_boltzman_machine.hpp  weight_initilizer.hpp
model/src/: activate_function.hpp  base_function.hpp  base_net.hpp  cart_t.hpp  cascade_judger.hpp  dbn_t.hpp  decision_tree.hpp  ht_memory.cpp  ht_memory.h  loss_function.hpp  main.cpp  mat.hpp  model_struct.h  prepare_data.cpp  prepare_data.h  proxy_dbn_t.hpp  restricked_boltzman_machine.hpp  update_methods.hpp
